<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fillTaskViewModel"
            type="com.iobytex.option.FillTaskViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.iobytex.option.FillTaskFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:elevation="0dp"
                app:menu="@menu/dialog_menu"
                app:navigationIcon="@drawable/ic_fluent_dismiss_circle_24_regular"
                app:title="@string/newTask"
                app:titleCentered="true" />

        </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />


            <TextView
                android:id="@+id/myTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0.6"
                android:text="@string/myNewTask"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/myTaskEditTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                style="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textImeMultiLine|textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/editTitleDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskEditTitle" />

            <TextView
                android:id="@+id/taskColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0.6"
                android:text="@string/colorTask"
                android:layout_marginVertical="10dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/editTitleDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginVertical="20dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/taskColor"/>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/colorDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/colorType" />


            <TextView
                android:id="@+id/myTaskDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0.6"
                android:text="@string/deadLine"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/colorDivider"
                app:layout_constraintStart_toStartOf="@id/left_well" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/myTaskEditDeadLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                style="@style/Widget.App.TextInputLayout"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                android:clickable="true"
                android:focusable="true"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskDeadline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/deadlineDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskEditDeadLine" />

            <TextView
                android:id="@+id/myTaskPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0.6"
                android:text="@string/place"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/deadlineDivider"
                app:layout_constraintStart_toStartOf="@id/left_well" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/myTaskEditPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                style="@style/Widget.App.DropdownTextInputLayout"
                app:endIconDrawable="@drawable/ic_location"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskPlace">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@null"
                    android:background="@android:color/transparent"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/placeDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskEditPlace" />

            <TextView
                android:id="@+id/myTaskType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0.6"
                android:text="@string/taskType"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/placeDivider"
                app:layout_constraintStart_toStartOf="@id/left_well" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/taskTypeChip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:endIconDrawable="@drawable/ic_location"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskType"/>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/taskTypeDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/taskTypeChip" />

            <TextView
                android:id="@+id/myTaskCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:alpha="0.6"
                android:text="@string/qrCode"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/taskTypeDivider"
                app:layout_constraintStart_toStartOf="@id/left_well" />

            <ImageView
                android:id="@+id/qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qrCode"
                android:scaleType="center"
                android:layout_marginVertical="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/myTaskCode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>