<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.iobytex.dashboard.DashBoardFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/welcome"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998"
                tools:text="@string/welcome" />

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingBottom="@dimen/dimen_18sp"
                android:text="@string/update"
                android:textSize="@dimen/dimen_21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_well"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toBottomOf="@id/welcome"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/search"
                app:layout_constraintBottom_toBottomOf="@+id/update"
                app:layout_constraintEnd_toStartOf="@+id/right_well"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/left_well"
                app:layout_constraintTop_toTopOf="@id/welcome"
                app:srcCompat="@drawable/ic_search"
                tools:ignore="TouchTargetSizeCheck" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="@style/ChipTapLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintBottom_toTopOf="@+id/pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed"
                app:tabGravity="fill"
                app:elevation="0dp"
                android:elevation="0dp"
                app:tabIndicatorGravity="center"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|center_horizontal"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="addtask"
            android:foreground="@drawable/ic_plus"
            android:foregroundTint="@color/secondaryColor"
            android:padding="@dimen/floatingbutton"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
